# stego-toolkit

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  THIRD-PARTY
.github/workflows/: ci.yml
src/: CLI.cpp  CLI.h  CryptoModule.cpp  CryptoModule.h  ImageStegoHandler.cpp  ImageStegoHandler.h  StegoHandler.h  Utils.cpp  main.cpp
src/algorithms/: StegoHandler.cpp  StegoHandler.h
src/algorithms/lsb/: LSBStegoHandler.cpp  LSBStegoHandler.h
src/algorithms/lsb/ordered/: LSBStegoHandlerOrdered.cpp  LSBStegoHandlerOrdered.h
src/algorithms/lsb/shuffle/: LSBStegoHandlerShuffle.cpp  LSBStegoHandlerShuffle.h
src/algorithms/lsbshuffle/: LSBShuffleStegoHandler.cpp  LSBShuffleStegoHandler.h
src/core/: CLI.cpp  CLI.h
src/utils/: CryptoModule.cpp  CryptoModule.h  ErrorHandler.cpp  ErrorHandler.h  ImageIO.cpp  ImageIO.h  Utils.cpp  Utils.h
tests/: test_helpers.cpp  test_helpers.h
tests/e2e/: test_cli.cpp
tests/fixtures/: README.md  generate_fixtures.py  large.txt  medium.txt  small.txt  unicode.txt
tests/integration/: test_embed_extract.cpp
tests/unit/: test_crypto.cpp  test_error_handler.cpp  test_image_io.cpp  test_lsb_handler.cpp
